# hasbuildpackbundlerupgradedyet

./: .appveyor.yml  .travis.yml  BENCHMARKS.md  Cargo.toml  Procfile  README.md  index.html  mise.toml  pyproject.toml
.github/workflows/: ci.yml  rust.yml
.tasks/: _default.toml  lint.toml  python.toml  rust.toml  toml.toml
ci/: before_script.sh  script.sh
python/: README.rst  constraints.txt  requirements.txt  server.py
ruby/: .rubocop.yml  Gemfile  Procfile  server.ru
ruby/lib/: has_buildpack_bundler_upgraded_yet.rb
src/: main.rs
