[package]
name = "hasbuildpackbundlerupgradedyet"
version = "0.1.2"
authors = ["Mark Lee"]
license = "AGPL-3.0"

[dependencies]

env_logger = "0.5"
futures = "0.1"
http = "0.1"
hyper = "0.12"
log = "0.4"
redis = "0.9"
regex = "1.5"
reqwest = "0.9"
rquery = "0.4"
semver = "0.9"
serde = "1.0"
serde_json = "1.0"
