[package]
name = "hasbuildpackbundlerupgradedyet"
version = "0.1.2"
authors = ["Mark Lee"]
license = "AGPL-3.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
env_logger = "0.5"
log = "0.4"
redis = "0.32"
regex = "1.5"
reqwest = "0.9"
rquery = "0.4"
semver = "0.9"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
