[package]
name = "hasbuildpackbundlerupgradedyet"
version = "0.1.2"
authors = ["Mark Lee"]
license = "AGPL-3.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
env_logger = "0.11"
log = "0.4"
redis = "0.32"
regex = "1.11"
reqwest = "0.12"
rquery = "0.4"
semver = "1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
